# nanochat

./: README_MAC.md  pyproject.toml  speedrun.sh
nanochat/: adamw.py  checkpoint_manager.py  common.py  configurator.py  core_eval.py  dataloader.py  engine.py  gpt.py  loss_eval.py  mlx_compat.py  mlx_muon.py  muon.py  report.py
scripts/: base_eval.py  base_loss.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  mid_train.py  tok_train.py
wandb/: latest-run
wandb/offline-run-20251014_232417-g08t411d/: run-g08t411d.wandb
wandb/offline-run-20251014_232417-g08t411d/files/: requirements.txt
wandb/offline-run-20251014_232736-8pzno5dd/: run-8pzno5dd.wandb
